依存并列关系处理

--- a/sementic_server/data/ontology/amb_rel_resolution.yml
+++ b/sementic_server/data/ontology/amb_rel_resolution.yml
@@ -39,6 +39,10 @@ email地址:
 - MobileNumOfAlipayLogin
 - MobileNumOfTaoBaoLogin
 - MobileNumOfMicroBlogLogin
+绑定:
+- EmailOfJDLogin
+- EmailOfAlipayLogin
+- EmailOfTaoBaoLogin
 登录:
 - MobileNumOfWeChatLogin
 - MobileNumOfDouYinLogin
