--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -17184,6 +17184,24 @@ qq好友: []
 - 出xian
 - chuxian
 - cuxian
+出现过:
+- chu现过
+- cu现过
+- 出xian过
+- chuxian过
+- cuxian过
+- 出现guo
+- 出现guoo
+- chu现guo
+- cu现guo
+- chu现guoo
+- cu现guoo
+- 出xianguo
+- 出xianguoo
+- chuxianguo
+- cuxianguo
+- chuxianguoo
+- cuxianguoo
 出生:
 - chu生
 - cu生
@@ -17565,6 +17583,15 @@ qq好友: []
 - cuzhongtonxue
 - chuzongtonxue
 - cuzongtonxue
+到过:
+- dao过
+- daoo过
+- 到guo
+- 到guoo
+- daoguo
+- daooguo
+- daoguoo
+- daooguoo
 副总:
 - fu总
 - 副zong
@@ -18073,6 +18100,12 @@ qq好友: []
 - yuan籍
 - 原ji
 - yuanji
+去过:
+- qu过
+- 去guo
+- 去guoo
+- quguo
+- quguoo
 双亲:
 - shuang亲
 - suang亲
@@ -55041,6 +55074,12 @@ qq好友: []
 - di弟
 - 弟di
 - didi
+待过:
+- dai过
+- 待guo
+- 待guoo
+- daiguo
+- daiguoo
 微信:
 - wei信
 - 微xin
@@ -60524,6 +60563,14 @@ qq好友: []
 - zongshengbannv
 - zhongsebannv
 - zongsebannv
+绑定:
+- bang定
+- 绑ding
+- 绑dingg
+- 绑din
+- bangding
+- bangdingg
+- bangdin
 继母:
 - 继mu
 继父:
@@ -62961,10 +63008,6 @@ qq好友: []
 - 邮jiandizi
 - youjiandizhi
 - youjiandizi
-邮箱:
-- you箱
-- 邮xiang
-- youxiang
 邮箱号码:
 - you箱号码
 - 邮xiang号码
