--- a/sementic_server/data/ontology/object_attribute.yml
+++ b/sementic_server/data/ontology/object_attribute.yml
@@ -356,3 +356,11 @@ MicroBlogFollower:
   belong: false
   domain: microblog
   range: microblog
+ParentToChild:
+  belong: false
+  domain: person
+  range: person
+PresidentOfCo:
+  belong: false
+  domain: person
+  range: company
