--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -3040,259 +3040,6 @@ qq好友: []
 - senmexiaooxue
 - shengmexiaooxue
 - semexiaooxue
-什么工作:
-- 啥工作
-- shen么工作
-- sen么工作
-- sheng么工作
-- se么工作
-- 什me工作
-- shenme工作
-- senme工作
-- shengme工作
-- seme工作
-- 什么gong作
-- 啥gong作
-- 什么gongg作
-- 啥gongg作
-- 什么gon作
-- 啥gon作
-- shen么gong作
-- sen么gong作
-- sheng么gong作
-- se么gong作
-- shen么gongg作
-- sen么gongg作
-- sheng么gongg作
-- se么gongg作
-- shen么gon作
-- sen么gon作
-- sheng么gon作
-- se么gon作
-- 什megong作
-- 什megongg作
-- 什megon作
-- shenmegong作
-- senmegong作
-- shengmegong作
-- semegong作
-- shenmegongg作
-- senmegongg作
-- shengmegongg作
-- semegongg作
-- shenmegon作
-- senmegon作
-- shengmegon作
-- semegon作
-- 什么工zuo
-- 啥工zuo
-- 什么工zhuo
-- 啥工zhuo
-- 什么工zuoo
-- 啥工zuoo
-- 什么工zhu
-- 啥工zhu
-- shen么工zuo
-- sen么工zuo
-- sheng么工zuo
-- se么工zuo
-- shen么工zhuo
-- sen么工zhuo
-- sheng么工zhuo
-- se么工zhuo
-- shen么工zuoo
-- sen么工zuoo
-- sheng么工zuoo
-- se么工zuoo
-- shen么工zhu
-- sen么工zhu
-- sheng么工zhu
-- se么工zhu
-- 什me工zuo
-- 什me工zhuo
-- 什me工zuoo
-- 什me工zhu
-- shenme工zuo
-- senme工zuo
-- shengme工zuo
-- seme工zuo
-- shenme工zhuo
-- senme工zhuo
-- shengme工zhuo
-- seme工zhuo
-- shenme工zuoo
-- senme工zuoo
-- shengme工zuoo
-- seme工zuoo
-- shenme工zhu
-- senme工zhu
-- shengme工zhu
-- seme工zhu
-- 什么gongzuo
-- 啥gongzuo
-- 什么gonggzuo
-- 啥gonggzuo
-- 什么gonzuo
-- 啥gonzuo
-- 什么gongzhuo
-- 啥gongzhuo
-- 什么gonzhuo
-- 啥gonzhuo
-- 什么gonggzhuo
-- 啥gonggzhuo
-- 什么gonzuo
-- 啥gonzuo
-- 什么gongzuoo
-- 啥gongzuoo
-- 什么gonzuoo
-- 啥gonzuoo
-- 什么gonggzuoo
-- 啥gonggzuoo
-- 什么gonzuo
-- 啥gonzuo
-- 什么gongzhu
-- 啥gongzhu
-- 什么gonzhu
-- 啥gonzhu
-- 什么gonggzhu
-- 啥gonggzhu
-- 什么gonzuo
-- 啥gonzuo
-- shen么gongzuo
-- sen么gongzuo
-- sheng么gongzuo
-- se么gongzuo
-- shen么gonggzuo
-- sen么gonggzuo
-- sheng么gonggzuo
-- se么gonggzuo
-- shen么gonzuo
-- sen么gonzuo
-- sheng么gonzuo
-- se么gonzuo
-- shen么gongzhuo
-- sen么gongzhuo
-- sheng么gongzhuo
-- se么gongzhuo
-- shen么gonzhuo
-- sen么gonzhuo
-- sheng么gonzhuo
-- se么gonzhuo
-- shen么gonggzhuo
-- sen么gonggzhuo
-- sheng么gonggzhuo
-- se么gonggzhuo
-- shen么gonzuo
-- sen么gonzuo
-- sheng么gonzuo
-- se么gonzuo
-- shen么gongzuoo
-- sen么gongzuoo
-- sheng么gongzuoo
-- se么gongzuoo
-- shen么gonzuoo
-- sen么gonzuoo
-- sheng么gonzuoo
-- se么gonzuoo
-- shen么gonggzuoo
-- sen么gonggzuoo
-- sheng么gonggzuoo
-- se么gonggzuoo
-- shen么gonzuo
-- sen么gonzuo
-- sheng么gonzuo
-- se么gonzuo
-- shen么gongzhu
-- sen么gongzhu
-- sheng么gongzhu
-- se么gongzhu
-- shen么gonzhu
-- sen么gonzhu
-- sheng么gonzhu
-- se么gonzhu
-- shen么gonggzhu
-- sen么gonggzhu
-- sheng么gonggzhu
-- se么gonggzhu
-- shen么gonzuo
-- sen么gonzuo
-- sheng么gonzuo
-- se么gonzuo
-- 什megongzuo
-- 什megonggzuo
-- 什megonzuo
-- 什megongzhuo
-- 什megonzhuo
-- 什megonggzhuo
-- 什megonzuo
-- 什megongzuoo
-- 什megonzuoo
-- 什megonggzuoo
-- 什megonzuo
-- 什megongzhu
-- 什megonzhu
-- 什megonggzhu
-- 什megonzuo
-- shenmegongzuo
-- senmegongzuo
-- shengmegongzuo
-- semegongzuo
-- shenmegonggzuo
-- senmegonggzuo
-- shengmegonggzuo
-- semegonggzuo
-- shenmegonzuo
-- senmegonzuo
-- shengmegonzuo
-- semegonzuo
-- shenmegongzhuo
-- senmegongzhuo
-- shengmegongzhuo
-- semegongzhuo
-- shenmegonzhuo
-- senmegonzhuo
-- shengmegonzhuo
-- semegonzhuo
-- shenmegonggzhuo
-- senmegonggzhuo
-- shengmegonggzhuo
-- semegonggzhuo
-- shenmegonzuo
-- senmegonzuo
-- shengmegonzuo
-- semegonzuo
-- shenmegongzuoo
-- senmegongzuoo
-- shengmegongzuoo
-- semegongzuoo
-- shenmegonzuoo
-- senmegonzuoo
-- shengmegonzuoo
-- semegonzuoo
-- shenmegonggzuoo
-- senmegonggzuoo
-- shengmegonggzuoo
-- semegonggzuoo
-- shenmegonzuo
-- senmegonzuo
-- shengmegonzuo
-- semegonzuo
-- shenmegongzhu
-- senmegongzhu
-- shengmegongzhu
-- semegongzhu
-- shenmegonzhu
-- senmegonzhu
-- shengmegonzhu
-- semegonzhu
-- shenmegonggzhu
-- senmegonggzhu
-- shengmegonggzhu
-- semegonggzhu
-- shenmegonzuo
-- senmegonzuo
-- shengmegonzuo
-- semegonzuo
 什么工厂:
 - 啥工厂
 - shen么工厂
@@ -21955,6 +21702,24 @@ qq好友: []
 - 外poo
 - waipo
 - waipoo
+外孙女:
+- wai孙女
+- 外sun女
+- 外shun女
+- waisun女
+- waishun女
+- 外孙nv
+- 外孙lv
+- wai孙nv
+- wai孙lv
+- 外sunnv
+- 外shunnv
+- 外sunlv
+- 外shunlv
+- waisunnv
+- waishunnv
+- waisunlv
+- waishunlv
 外教:
 - wai教
 - 外jiao
@@ -25204,6 +24969,78 @@ qq好友: []
 - jiazhainaer
 - jiazailaer
 - jiazhailaer
+家在哪里:
+- 家在那里
+- jia在哪里
+- jia在那里
+- 家zai哪里
+- 家zhai哪里
+- 家zai那里
+- 家zhai那里
+- jiazai哪里
+- jiazhai哪里
+- jiazai那里
+- jiazhai那里
+- 家在na里
+- 家在la里
+- jia在na里
+- jia在la里
+- 家zaina里
+- 家zhaina里
+- 家zaila里
+- 家zhaila里
+- jiazaina里
+- jiazhaina里
+- jiazaila里
+- jiazhaila里
+- 家在哪li
+- 家在那li
+- 家在哪ni
+- 家在那ni
+- jia在哪li
+- jia在那li
+- jia在哪ni
+- jia在那ni
+- 家zai哪li
+- 家zhai哪li
+- 家zai那li
+- 家zhai那li
+- 家zai哪ni
+- 家zhai哪ni
+- 家zai那ni
+- 家zhai那ni
+- jiazai哪li
+- jiazhai哪li
+- jiazai那li
+- jiazhai那li
+- jiazai哪ni
+- jiazhai哪ni
+- jiazai那ni
+- jiazhai那ni
+- 家在nali
+- 家在lali
+- 家在nani
+- 家在lani
+- jia在nali
+- jia在lali
+- jia在nani
+- jia在lani
+- 家zainali
+- 家zhainali
+- 家zailali
+- 家zhailali
+- 家zainani
+- 家zhainani
+- 家zailani
+- 家zhailani
+- jiazainali
+- jiazhainali
+- jiazailali
+- jiazhailali
+- jiazainani
+- jiazhainani
+- jiazailani
+- jiazhailani
 家室:
 - jia室
 - 家shi
@@ -32128,29 +31965,6 @@ qq好友: []
 - 居zu
 - juzhu
 - juzu
-工作:
-- gong作
-- gongg作
-- gon作
-- 工zuo
-- 工zhuo
-- 工zuoo
-- 工zhu
-- gongzuo
-- gonggzuo
-- gonzuo
-- gongzhuo
-- gonzhuo
-- gonggzhuo
-- gonzuo
-- gongzuoo
-- gonzuoo
-- gonggzuoo
-- gonzuo
-- gongzhu
-- gonzhu
-- gonggzhu
-- gonzuo
 工作单位:
 - gong作单位
 - gongg作单位
@@ -57244,10 +57058,6 @@ qq好友: []
 - segfu
 - shenfu
 - sefu
-电话:
-- dian话
-- 电hua
-- dianhua
 电话号码:
 - dian话号码
 - 电hua号码
@@ -60563,6 +60373,19 @@ qq好友: []
 - zongshengbannv
 - zhongsebannv
 - zongsebannv
+经理:
+- jing理
+- jingg理
+- jin理
+- 经li
+- 经ni
+- jingli
+- jinggli
+- jinli
+- jingni
+- jinni
+- jinggni
+- jinli
 绑定:
 - bang定
 - 绑ding
