--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -56570,6 +56570,15 @@ qq好友: []
 - fadindaibiaooreng
 - fadinggdaibiaooreng
 - fadindaibiaoren
+注册:
+- zhu册
+- zu册
+- 注ce
+- 注che
+- zhuce
+- zuce
+- zhuche
+- zuche
 注册地:
 - zhu册地
 - zu册地
