--- a/sementic_server/data/ontology/v_property_mentions.yml
+++ b/sementic_server/data/ontology/v_property_mentions.yml
@@ -62,6 +62,7 @@ Ambiguous:
 - 婚姻状况
 16:
 - 宗教状况
+- 信什么教
 147:
 - 工商注册号
 30:
@@ -98,6 +99,8 @@ Ambiguous:
 154:
 - 注册时间
 164:
+- 注册资本
+- 注册资金
 - 注册资本金
 5:
 - 生日
