--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -2,6 +2,8 @@ CEO: []
 QQ为: []
 QQ号为: []
 QQ好友: []
+SIM卡IMSI: []
+SIM卡的IMSI: []
 call: []
 email地址: []
 qq为: []
@@ -14,6 +16,30 @@ qq好友: []
 - yi起qu
 - 一qiqu
 - yiqiqu
+一起去过:
+- yi起去过
+- 一qi去过
+- yiqi去过
+- 一起qu过
+- yi起qu过
+- 一qiqu过
+- yiqiqu过
+- 一起去guo
+- 一起去guoo
+- yi起去guo
+- yi起去guoo
+- 一qi去guo
+- 一qi去guoo
+- yiqi去guo
+- yiqi去guoo
+- 一起quguo
+- 一起quguoo
+- yi起quguo
+- yi起quguoo
+- 一qiquguo
+- 一qiquguoo
+- yiqiquguo
+- yiqiquguoo
 一起工作:
 - yi起工作
 - 一qi工作
@@ -106,6 +132,18 @@ qq好友: []
 - yiqigonzhu
 - yiqigonggzhu
 - yiqigonzuo
+一起来:
+- yi起来
+- 一qi来
+- yiqi来
+- 一起lai
+- 一起nai
+- yi起lai
+- yi起nai
+- 一qilai
+- 一qinai
+- yiqilai
+- yiqinai
 丈夫:
 - zhang夫
 - zang夫
@@ -5671,6 +5709,42 @@ qq好友: []
 - zunaer
 - zhulaer
 - zulaer
+住哪里:
+- 住那里
+- zhu哪里
+- zu哪里
+- zhu那里
+- zu那里
+- 住na里
+- 住la里
+- zhuna里
+- zuna里
+- zhula里
+- zula里
+- 住哪li
+- 住那li
+- 住哪ni
+- 住那ni
+- zhu哪li
+- zu哪li
+- zhu那li
+- zu那li
+- zhu哪ni
+- zu哪ni
+- zhu那ni
+- zu那ni
+- 住nali
+- 住lali
+- 住nani
+- 住lani
+- zhunali
+- zunali
+- zhulali
+- zulali
+- zhunani
+- zunani
+- zhulani
+- zulani
 住在:
 - zhu在
 - zu在
@@ -6481,6 +6555,8 @@ qq好友: []
 - zuzhi
 - zhuzi
 - zuzi
+住户:
+- 住hu
 住进:
 - zhu进
 - zu进
@@ -7187,6 +7263,214 @@ qq好友: []
 - gonshijiaooseme
 - gonggshijiaooseme
 - gonsijiaoshenme
+公司在哪:
+- 工司在哪
+- 公司在那
+- 工司在那
+- gong司在哪
+- gongg司在哪
+- gon司在哪
+- gong司在那
+- gon司在那
+- gongg司在那
+- gon司在哪
+- 公si在哪
+- 工si在哪
+- 公shi在哪
+- 工shi在哪
+- 公si在那
+- 工si在那
+- 公shi在那
+- 工shi在那
+- gongsi在哪
+- gonggsi在哪
+- gonsi在哪
+- gongshi在哪
+- gonshi在哪
+- gonggshi在哪
+- gonsi在哪
+- gongsi在那
+- gonsi在那
+- gonggsi在那
+- gonsi在哪
+- gongshi在那
+- gonshi在那
+- gonggshi在那
+- gonsi在哪
+- 公司zai哪
+- 工司zai哪
+- 公司zhai哪
+- 工司zhai哪
+- 公司zai那
+- 工司zai那
+- 公司zhai那
+- 工司zhai那
+- gong司zai哪
+- gongg司zai哪
+- gon司zai哪
+- gong司zhai哪
+- gon司zhai哪
+- gongg司zhai哪
+- gon司zai哪
+- gong司zai那
+- gon司zai那
+- gongg司zai那
+- gon司zai哪
+- gong司zhai那
+- gon司zhai那
+- gongg司zhai那
+- gon司zai哪
+- 公sizai哪
+- 工sizai哪
+- 公shizai哪
+- 工shizai哪
+- 公sizhai哪
+- 工sizhai哪
+- 公shizhai哪
+- 工shizhai哪
+- 公sizai那
+- 工sizai那
+- 公shizai那
+- 工shizai那
+- 公sizhai那
+- 工sizhai那
+- 公shizhai那
+- 工shizhai那
+- gongsizai哪
+- gonggsizai哪
+- gonsizai哪
+- gongshizai哪
+- gonshizai哪
+- gonggshizai哪
+- gonsizai哪
+- gongsizhai哪
+- gonsizhai哪
+- gonggsizhai哪
+- gonsizai哪
+- gongshizhai哪
+- gonshizhai哪
+- gonggshizhai哪
+- gonsizai哪
+- gongsizai那
+- gonsizai那
+- gonggsizai那
+- gonsizai哪
+- gongshizai那
+- gonshizai那
+- gonggshizai那
+- gonsizai哪
+- gongsizhai那
+- gonsizhai那
+- gonggsizhai那
+- gonsizai哪
+- gongshizhai那
+- gonshizhai那
+- gonggshizhai那
+- gonsizai哪
+- 公司在na
+- 工司在na
+- 公司在la
+- 工司在la
+- gong司在na
+- gongg司在na
+- gon司在na
+- gong司在la
+- gon司在la
+- gongg司在la
+- gon司在na
+- 公si在na
+- 工si在na
+- 公shi在na
+- 工shi在na
+- 公si在la
+- 工si在la
+- 公shi在la
+- 工shi在la
+- gongsi在na
+- gonggsi在na
+- gonsi在na
+- gongshi在na
+- gonshi在na
+- gonggshi在na
+- gonsi在na
+- gongsi在la
+- gonsi在la
+- gonggsi在la
+- gonsi在na
+- gongshi在la
+- gonshi在la
+- gonggshi在la
+- gonsi在na
+- 公司zaina
+- 工司zaina
+- 公司zhaina
+- 工司zhaina
+- 公司zaila
+- 工司zaila
+- 公司zhaila
+- 工司zhaila
+- gong司zaina
+- gongg司zaina
+- gon司zaina
+- gong司zhaina
+- gon司zhaina
+- gongg司zhaina
+- gon司zaina
+- gong司zaila
+- gon司zaila
+- gongg司zaila
+- gon司zaina
+- gong司zhaila
+- gon司zhaila
+- gongg司zhaila
+- gon司zaina
+- 公sizaina
+- 工sizaina
+- 公shizaina
+- 工shizaina
+- 公sizhaina
+- 工sizhaina
+- 公shizhaina
+- 工shizhaina
+- 公sizaila
+- 工sizaila
+- 公shizaila
+- 工shizaila
+- 公sizhaila
+- 工sizhaila
+- 公shizhaila
+- 工shizhaila
+- gongsizaina
+- gonggsizaina
+- gonsizaina
+- gongshizaina
+- gonshizaina
+- gonggshizaina
+- gonsizaina
+- gongsizhaina
+- gonsizhaina
+- gonggsizhaina
+- gonsizaina
+- gongshizhaina
+- gonshizhaina
+- gonggshizhaina
+- gonsizaina
+- gongsizaila
+- gonsizaila
+- gonggsizaila
+- gonsizaina
+- gongshizaila
+- gonshizaila
+- gonggshizaila
+- gonsizaina
+- gongsizhaila
+- gonsizhaila
+- gonggsizhaila
+- gonsizaina
+- gongshizhaila
+- gonshizhaila
+- gonggshizhaila
+- gonsizaina
 公司地址:
 - 工司地址
 - gong司地址
@@ -18063,6 +18347,88 @@ qq好友: []
 - tongyijiawangba
 - tonggyijiawangba
 - tonyijiawangba
+同一火车:
+- tong一火车
+- tongg一火车
+- ton一火车
+- 同yi火车
+- tongyi火车
+- tonggyi火车
+- tonyi火车
+- 同一huo车
+- 同一huoo车
+- tong一huo车
+- tongg一huo车
+- ton一huo车
+- tong一huoo车
+- ton一huoo车
+- tongg一huoo车
+- ton一huo车
+- 同yihuo车
+- 同yihuoo车
+- tongyihuo车
+- tonggyihuo车
+- tonyihuo车
+- tongyihuoo车
+- tonyihuoo车
+- tonggyihuoo车
+- tonyihuo车
+- 同一火che
+- 同一火ce
+- tong一火che
+- tongg一火che
+- ton一火che
+- tong一火ce
+- ton一火ce
+- tongg一火ce
+- ton一火che
+- 同yi火che
+- 同yi火ce
+- tongyi火che
+- tonggyi火che
+- tonyi火che
+- tongyi火ce
+- tonyi火ce
+- tonggyi火ce
+- tonyi火che
+- 同一huoche
+- 同一huooche
+- 同一huoce
+- 同一huooce
+- tong一huoche
+- tongg一huoche
+- ton一huoche
+- tong一huooche
+- ton一huooche
+- tongg一huooche
+- ton一huoche
+- tong一huoce
+- ton一huoce
+- tongg一huoce
+- ton一huoche
+- tong一huooce
+- ton一huooce
+- tongg一huooce
+- ton一huoche
+- 同yihuoche
+- 同yihuooche
+- 同yihuoce
+- 同yihuooce
+- tongyihuoche
+- tonggyihuoche
+- tonyihuoche
+- tongyihuooche
+- tonyihuooche
+- tonggyihuooche
+- tonyihuoche
+- tongyihuoce
+- tonyihuoce
+- tonggyihuoce
+- tonyihuoche
+- tongyihuooce
+- tonyihuooce
+- tonggyihuooce
+- tonyihuoche
 同乡:
 - tong乡
 - tongg乡
@@ -19561,6 +19927,38 @@ qq好友: []
 - nagegonchang
 - leigegonchang
 - nagegongchang
+哪个是:
+- 那个是
+- nei个是
+- lei个是
+- na个是
+- 哪ge是
+- 那ge是
+- neige是
+- leige是
+- nage是
+- 哪个shi
+- 那个shi
+- 哪个si
+- 那个si
+- nei个shi
+- lei个shi
+- na个shi
+- nei个si
+- na个si
+- lei个si
+- na个shi
+- 哪geshi
+- 那geshi
+- 哪gesi
+- 那gesi
+- neigeshi
+- leigeshi
+- nageshi
+- neigesi
+- nagesi
+- leigesi
+- nageshi
 哪个机关:
 - 那个机关
 - nei个机关
@@ -20427,6 +20825,114 @@ qq好友: []
 - lagonggzhu
 - nagonzuo
 - lagonzuo
+哪里注册:
+- 那里注册
+- na里注册
+- la里注册
+- 哪li注册
+- 那li注册
+- 哪ni注册
+- 那ni注册
+- nali注册
+- lali注册
+- nani注册
+- lani注册
+- 哪里zhu册
+- 那里zhu册
+- 哪里zu册
+- 那里zu册
+- na里zhu册
+- la里zhu册
+- na里zu册
+- la里zu册
+- 哪lizhu册
+- 那lizhu册
+- 哪nizhu册
+- 那nizhu册
+- 哪lizu册
+- 那lizu册
+- 哪nizu册
+- 那nizu册
+- nalizhu册
+- lalizhu册
+- nanizhu册
+- lanizhu册
+- nalizu册
+- lalizu册
+- nanizu册
+- lanizu册
+- 哪里注ce
+- 那里注ce
+- 哪里注che
+- 那里注che
+- na里注ce
+- la里注ce
+- na里注che
+- la里注che
+- 哪li注ce
+- 那li注ce
+- 哪ni注ce
+- 那ni注ce
+- 哪li注che
+- 那li注che
+- 哪ni注che
+- 那ni注che
+- nali注ce
+- lali注ce
+- nani注ce
+- lani注ce
+- nali注che
+- lali注che
+- nani注che
+- lani注che
+- 哪里zhuce
+- 那里zhuce
+- 哪里zuce
+- 那里zuce
+- 哪里zhuche
+- 那里zhuche
+- 哪里zuche
+- 那里zuche
+- na里zhuce
+- la里zhuce
+- na里zuce
+- la里zuce
+- na里zhuche
+- la里zhuche
+- na里zuche
+- la里zuche
+- 哪lizhuce
+- 那lizhuce
+- 哪nizhuce
+- 那nizhuce
+- 哪lizuce
+- 那lizuce
+- 哪nizuce
+- 那nizuce
+- 哪lizhuche
+- 那lizhuche
+- 哪nizhuche
+- 那nizhuche
+- 哪lizuche
+- 那lizuche
+- 哪nizuche
+- 那nizuche
+- nalizhuce
+- lalizhuce
+- nanizhuce
+- lanizhuce
+- nalizuce
+- lalizuce
+- nanizuce
+- lanizuce
+- nalizhuche
+- lalizhuche
+- nanizhuche
+- lanizhuche
+- nalizuche
+- lalizuche
+- nanizuche
+- lanizuche
 四姑:
 - si姑
 - shi姑
@@ -24897,6 +25403,12 @@ qq好友: []
 - jia口
 - 家kou
 - jiakou
+家在:
+- jia在
+- 家zai
+- 家zhai
+- jiazai
+- jiazhai
 家在哪:
 - 家在那
 - jia在哪
@@ -31269,6 +31781,8 @@ qq好友: []
 - mi友
 - 密you
 - miyou
+对应的IMEI号: []
+对应的imsi: []
 导师:
 - dao师
 - daoo师
@@ -31965,6 +32479,29 @@ qq好友: []
 - 居zu
 - juzhu
 - juzu
+工作:
+- gong作
+- gongg作
+- gon作
+- 工zuo
+- 工zhuo
+- 工zuoo
+- 工zhu
+- gongzuo
+- gonggzuo
+- gonzuo
+- gongzhuo
+- gonzhuo
+- gonggzhuo
+- gonzuo
+- gongzuoo
+- gonzuoo
+- gonggzuoo
+- gonzuo
+- gongzhu
+- gonzhu
+- gonggzhu
+- gonzuo
 工作单位:
 - gong作单位
 - gongg作单位
@@ -55279,6 +55816,8 @@ qq好友: []
 - 手ji
 - shouji
 - souji
+手机imsi号码: []
+手机卡imsi号: []
 手机物理地址:
 - shou机物理地址
 - sou机物理地址
@@ -55801,6 +56340,54 @@ qq好友: []
 - gu旧
 - 故jiu
 - gujiu
+是哪一位:
+- 是那一位
+- shi哪一位
+- si哪一位
+- shi那一位
+- si那一位
+- 是na一位
+- 是la一位
+- shina一位
+- sina一位
+- shila一位
+- sila一位
+- 是哪yi位
+- 是那yi位
+- shi哪yi位
+- si哪yi位
+- shi那yi位
+- si那yi位
+- 是nayi位
+- 是layi位
+- shinayi位
+- sinayi位
+- shilayi位
+- silayi位
+- 是哪一wei
+- 是那一wei
+- shi哪一wei
+- si哪一wei
+- shi那一wei
+- si那一wei
+- 是na一wei
+- 是la一wei
+- shina一wei
+- sina一wei
+- shila一wei
+- sila一wei
+- 是哪yiwei
+- 是那yiwei
+- shi哪yiwei
+- si哪yiwei
+- shi那yiwei
+- si那yiwei
+- 是nayiwei
+- 是layiwei
+- shinayiwei
+- sinayiwei
+- shilayiwei
+- silayiwei
 是谁:
 - shi谁
 - si谁
@@ -56570,15 +57157,6 @@ qq好友: []
 - fadindaibiaooreng
 - fadinggdaibiaooreng
 - fadindaibiaoren
-注册:
-- zhu册
-- zu册
-- 注ce
-- 注che
-- zhuce
-- zuce
-- zhuche
-- zuche
 注册地:
 - zhu册地
 - zu册地
@@ -57315,6 +57893,16 @@ qq好友: []
 - den陆
 - denlu
 - denlu
+的IMEI号: []
+的IMSI号: []
+的IMSI号码: []
+的imsi号: []
+的人:
+- de人
+- 的ren
+- 的reng
+- deren
+- dereng
 相公:
 - 相工
 - xiang公
@@ -57641,6 +58229,12 @@ qq好友: []
 - 祖fu
 - zufu
 - zhufu
+祖籍:
+- zu籍
+- zhu籍
+- 祖ji
+- zuji
+- zhuji
 祖籍地有可能为:
 - zu籍地有可能为
 - zhu籍地有可能为
@@ -59501,6 +60095,8 @@ qq好友: []
 - zhujisuoozhaidisi
 - zujishuzhaidisi
 - zhujishuzhaidisi
+租户:
+- 租hu
 租房:
 - zu房
 - zhu房
@@ -59561,6 +60157,24 @@ qq好友: []
 - zhufangzhuzhai
 - zufangzuzhai
 - zhufangzuzhai
+租房在:
+- zu房在
+- zhu房在
+- 租fang在
+- zufang在
+- zhufang在
+- 租房zai
+- 租房zhai
+- zu房zai
+- zhu房zai
+- zu房zhai
+- zhu房zhai
+- 租fangzai
+- 租fangzhai
+- zufangzai
+- zhufangzai
+- zufangzhai
+- zhufangzhai
 租房居住:
 - zu房居住
 - zhu房居住
@@ -59597,6 +60211,60 @@ qq好友: []
 - zhufangjuzhu
 - zufangjuzu
 - zhufangjuzu
+租过房子:
+- zu过房子
+- zhu过房子
+- 租guo房子
+- 租guoo房子
+- zuguo房子
+- zhuguo房子
+- zuguoo房子
+- zhuguoo房子
+- 租过fang子
+- zu过fang子
+- zhu过fang子
+- 租guofang子
+- 租guoofang子
+- zuguofang子
+- zhuguofang子
+- zuguoofang子
+- zhuguoofang子
+- 租过房zi
+- 租过房zhi
+- zu过房zi
+- zhu过房zi
+- zu过房zhi
+- zhu过房zhi
+- 租guo房zi
+- 租guoo房zi
+- 租guo房zhi
+- 租guoo房zhi
+- zuguo房zi
+- zhuguo房zi
+- zuguoo房zi
+- zhuguoo房zi
+- zuguo房zhi
+- zhuguo房zhi
+- zuguoo房zhi
+- zhuguoo房zhi
+- 租过fangzi
+- 租过fangzhi
+- zu过fangzi
+- zhu过fangzi
+- zu过fangzhi
+- zhu过fangzhi
+- 租guofangzi
+- 租guoofangzi
+- 租guofangzhi
+- 租guoofangzhi
+- zuguofangzi
+- zhuguofangzi
+- zuguoofangzi
+- zhuguoofangzi
+- zuguofangzhi
+- zhuguofangzhi
+- zuguoofangzhi
+- zhuguoofangzhi
 管理员:
 - guan理员
 - 管li员
